# insert-gossip

./: .example.env  .gitignore  BlockchainRequester.py  ChannelAnnouncementBatcher.py  ChannelAnnouncementProcessor.py  Dockerfile  NodeAnnouncementBatcher.py  NodeAnnouncementBatcher2.py  README.md  ValkeyClient.py  backfill_gossip_cache.py  common.py  config.py  delete-gossip-ids-in-cache.py  docker-compose.yaml  docker-compose.yml  fill_gossip_cache_with_scid.py  init.sql  insert_channel_announcements.py  insert_channel_announcements_multi_thread.py  insert_channel_updates.py  insert_node_announcements.py  invalid_channel_announcements-multi_threaded.gsp  invalid_channel_announcements.gossip  invalid_channel_announcements.gsp  main.py  new-main.py  pyproject.toml  requirements.txt  split_gossip_messages.py  temp.py  temp.txt
.github/workflows/: deploy.yml
monitoring/: loki-config.yaml  prometheus.yml  promtail-config.yaml
